--- a/README.org
+++ b/README.org
@@ -1,3 +1,3 @@
 * Yet another dotfile repository
-Keeping dotfiles in a centralized space and use GNU stow for managing needed symlinks.
+Keeping dotfiles in a centralized space and use GNU stow for managing needed symlinks. \\
 Also learning GNU Emacs with org-mode and Magit along the way :)
